syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

message FilingStatusMessage {
    int32 code = 1;
    string message = 2;
}

message FilingMessage {
    string period = 1;
    string lei = 2;
    FilingStatusMessage status = 3;
    bool filingRequired = 4;
    int64 start = 5;
    int64 end = 6;
}